# GOTT

./: COPYING  Doxyfile  SConstruct  attention-pls  concepts.cpp  greatcontainer3.cpp  license-source-header.txt  notepad  semantic.cache  snapshot-naming-convention.txt
contrib/glsk/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure.ac
gott/: CMakeLists.txt  Doxyfile  Doxyfile.no_dot  README.build  SConscript  SConstruct  TODO  add-test.py  auto.hpp  autoconv.hpp  check-sizes.pl  create-test-suite.py  deduced_features.tdl  doxyhead.html  exceptions.cpp  exceptions.hpp  gott_auto.hpp  interface_registry.tdl  libdirs.txt  mainpage.dox  module_registry.tdl  ns_gott.dox  options-linux.py  pathconf.hpp.in  plugin.hpp  plugin_registry.tdl  range.hpp  range_algo.hpp  setup_libpath.sh  setup_runtime.sh  sys-darwin.py  sys-freebsd6.py  sys-linux2.py  sys-win32.py  test.hpp  thunk.cpp  thunk.hpp  visibility.hpp  xany.hpp
gott/base/: SConscript
gott/buildconf/: GccVisibility.cmake  GccVisibility.cpp  PlatformBasic.cmake  PlatformExtra.cmake  PlatformHeaders.cmake  SConscript
gott/configuration/: SConscript  ns_config.dox  read_tdl.cpp  read_tdl.hpp
gott/configure/: SConscript
gott/debug/: SConscript  assert.hpp  debugstream.cpp  debugstream.hpp  testcase.cpp  trace.hpp  tracefilter.cpp  tracefilter.hpp  traceobject.cpp  traceobject.hpp  util.hpp  warnings.hpp
gott/events/: SConscript  auto_loop.cpp  auto_loop.hpp  auto_loop_test.cpp  basic_timer.hpp  deadline_timer.hpp  epoll_loop.cpp  epoll_loop.hpp  fd_manager.cpp  fd_manager.hpp  inprocess_message_manager.cpp  inprocess_message_manager.hpp  kqueue_loop.cpp  kqueue_loop.hpp  loop_requirement.cpp  loop_requirement.hpp  main_loop.cpp  main_loop.hpp  main_loop_factory.cpp  main_loop_factory.hpp  message_queue.hpp  message_queue_loop.cpp  message_queue_loop.hpp  monotonic_timer.hpp  mq_loop_test.cpp  mq_test.cpp  ns_events.dox  periodic_timer.hpp  quit_manager.cpp  quit_manager.hpp  select_loop.cpp  select_loop.hpp  selfpipe_message_manager.cpp  selfpipe_message_manager.hpp  signal_manager.cpp  signal_manager.hpp  sigselfpipe.cpp  sigselfpipe.hpp  timer_manager.cpp  timer_manager.hpp
gott/examples/: SConscript  greeting_interface.cpp  greeting_interface.hpp  just_curses.cpp  just_windows.cpp  pongbar_loop.cpp  producer_consumer1.cpp  throttled_yes.cpp
gott/fixstl/: string.hpp
gott/format/: plaintext.cpp  plaintext.hpp  text.cpp  text.hpp  tokenized_text.cpp  tokenized_text.hpp
gott/graphics/: SConscript  drawing_context.cpp  drawing_context.hpp  font.cpp  font.hpp  geometry.cpp  geometry.hpp  graphics_outline.dox  invalidation.cpp  invalidation.hpp  line_management.cpp  line_management.hpp  ns_graphics.dox  object.cpp  object.hpp  path.cpp  path.hpp  pattern.cpp  pattern.hpp  pattern_solid.cpp  pattern_solid.hpp  pipeline.dox  pipeline.hpp  point.hpp  primitive_types.hpp  renderer.cpp  renderer.dox  renderer.hpp  transformations.cpp  transformations.hpp
gott/hci/: SConscript  container.cpp  container.hpp  container_object.cpp  container_object.hpp  named_object.cpp  named_object.hpp  object.cpp  object.hpp  reference.cpp  reference.hpp  stereotype.cpp  stereotype.hpp  transformation.cpp  transformation.hpp  with_name.cpp  with_name.hpp
gott/metadata/: all_metadata.dia  database.cpp  database.hpp  handle.hpp  index.hpp  interface.cpp  interface.hpp  load.cpp  load.hpp  module.cpp  module.hpp  param_detail.hpp  plugin.cpp  plugin.hpp  tables.cpp  tables.hpp  tdl_metadata.cpp  transaction.cpp  transaction.hpp  validate.cpp  validate.hpp
gott/notify_fs/: SConscript  engine.cpp  engine.hpp  engine_factory.cpp  engine_factory.hpp  event.hpp  notification_engine.cpp  notification_engine.hpp  ns_notify_fs.dox  test.cpp  watch.cpp  watch.hpp
gott/plugin/: SConscript  descriptor.hpp  error.cpp  error.hpp  extensions.cpp  extensions.hpp  hook.cpp  hook.hpp  lazy_handle.hpp  load.cpp  load.hpp  metadata.cpp  metadata.hpp  metadata_manager.cpp  metadata_manager.hpp  module.cpp  module.hpp  module_metadata.cpp  module_metadata.hpp  multi_plugin.cpp  multi_plugin.hpp  ns_plugin.dox  param_detail.hpp  plugin.cpp  plugin.hpp  plugin_base.cpp  plugin_base.hpp  plugin_builder.hpp  plugin_configuration.cpp  plugin_configuration.hpp  plugin_handle.cpp  plugin_handle.hpp  plugin_metadata.cpp  plugin_metadata.hpp  plugin_tutorial.dox  selector.cpp  selector.hpp  system_configuration.cpp  system_configuration.hpp  tdl_loader.cpp  (+5 more)
gott/properties/: SConscript  concrete_property.hpp  embedded_storage.hpp  external_storage.hpp  liaison.hpp  ns_properties.dox  policy.hpp  properties_prosa.dox  property.hpp  sigc_notification.hpp  signal_notification.hpp  test.cpp  translate.hpp  translation_property.hpp  triggered_copy.hpp  trivial_aux.hpp  verify.hpp
gott/string/: SConscript  atom.cpp  atom.hpp  buffer.cpp  buffer.hpp  convert.cpp  convert.hpp  iterator.hpp  qid.cpp  qid.hpp  stl.cpp  stl.hpp  string.cpp  string.hpp  string_impl.hpp  types.hpp  utf32_wrapper.hpp  utf8_wrapper.hpp
gott/syswrap/: SConscript  clocks.cpp  clocks.hpp  dl_unix.cpp  dl_unix.hpp  epoll_linux.cpp  epoll_linux.hpp  errno.cpp  errno.hpp  function_cast.hpp  inotify.h  inotify_linux.cpp  inotify_linux.hpp  kqueue_bsd.cpp  kqueue_bsd.hpp  open_unix.cpp  open_unix.hpp  pipe_unix.cpp  pipe_unix.hpp  read_write_unix.cpp  read_write_unix.hpp  scoped_unix_file.cpp  scoped_unix_file.hpp  select_unix.cpp  select_unix.hpp  sysconf_posix.hpp  system_error.cpp  system_error.hpp  test.cpp
gott/tdl/: SConscript  exceptions.cpp  exceptions.hpp  mismatch.cpp  ns_tdl.dox  resource.cpp  resource.hpp  source_position.hpp
gott/tests/: SConscript  runner.cpp
gott/thread/: SConscript  locking_ptr.hpp  message_queue.hpp  message_queue_prosa.dox  mq_test.cpp  ns_thread.dox
gott/tools/: find_metadata.cpp  indent.pl  local_metadata.sh
gott/tut/: LICENSE  call.cpp  ns_tut.dox  tut.h  tut_html.h  tut_reporter.h  tut_restartable.h
gott/ui/: SConscript  input.cpp  input.hpp  ns_ui.dox  uicontext_base.cpp  uicontext_base.hpp  window.hpp  window_base.cpp  (+1 more)
(+994 files in other folders)
