bin_PROGRAMS=glskmm-test
glskmm_test_SOURCES= glskmm-test.cpp
glskmm_test_CXXFLAGS= @GL_CFLAGS@ @SIGC_CFLAGS@ -I$(top_srcdir)/include/
glskmm_test_LDADD= @GL_LIBS@ @SIGC_LIBS@ $(top_builddir)/source/glsk/libglsk.a $(top_builddir)/source/glskcore/libglskcore.la $(top_builddir)/source/glskmm/libglskmm.la

